removed abbr element and styling

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
 				<details open>
 					<summary>
-						<abbr title="Hypertext Markup Language" tabindex="0">HTML</abbr>/<abbr title="Cascading Style Sheets" tabindex="0">CSS</abbr>
+						HTML/CSS
 					</summary>
 
 					<div class="projects">
